--- a/index.html
+++ b/index.html
@@ -4,19 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Crawler App</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <div class="container">
         <h1>Web Crawler App</h1>
-        <form id="crawlerForm">
+        <form action="/crawl" method="post">
             <label for="mainInput">Enter the main link or keyword to crawl:</label>
             <input type="text" id="mainInput" name="mainInput" required>
-            <button type="button" onclick="submitForm()">Crawl</button>
+            <button type="submit">Crawl</button>
         </form>
-        <div id="outputContainer"></div>
     </div>
-
-    <script src="app.js"></script>
 </body>
 </html>
